<resources>
    <string name="app_name">Megalobiz</string>
    <string name="go_to_home_screen">Go to Home Screen</string>
    <string name="connect_to_megalobiz">CONNECT TO MEGALOBIZ</string>
    <string name="account_proposal_question">Don\'t have an account yet?</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_check">Password Check</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="menu_title">Menu Title</string>
    <string name="menu">Menu</string>
    <string name="drawer_open">Navigation</string>
    <string name="top_showbiz_title">Megalobiz Hits</string>
    <string name="guest">Guest</string>
    <string name="megalobiz">Megalobiz</string>
    <string name="bands_title">Bands List</string>
    <string name="musicians_title">Musicians List</string>
    <string name="albums_title">Albums List</string>
    <string name="songs_title">Songs List</string>
    <string name="showbiz_title">Showbiz Profile</string>
    <string name="band_title">Band Profile</string>
    <string name="musician_title">Musician Profile</string>
    <string name="album_title">Album Page</string>
    <string name="song_title">Song Page</string>
    <string name="showbiz_name">Showbiz Name</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="band_name">Band Name</string>
    <string name="top_musicians">Top Musicians</string>
    <string name="_0">0</string>
    <string name="owner">Owner</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_albums">Top Albums</string>
    <string name="singles">Singles</string>
    <string name="respected">Respected</string>
    <string name="unrespected">Unrespected</string>
    <string name="unknown">Unknown</string>
    <string name="albums">Albums</string>
    <string name="musicians">Musicians</string>
    <string name="genre">Genre</string>
    <string name="members">Members</string>
    <string name="songs">Songs</string>
    <string name="year">Year</string>
    <string name="showbiz_type">Type</string>
    <string name="band">Band</string>
    <string name="number_of_votes">number of votes</string>
    <string name="my_vote">My vote :</string>
    <string name="no_vote_yet">No vote yet</string>

</resources>
