<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.megalobiz.megalobiz.activities.RegisterActivity" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Register in Megalobiz"
        android:id="@+id/tvRegisterTitle"
        android:textColor="#158EC6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onRegister"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegisterTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/tableLayout"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/first_name"
                android:id="@+id/tvFirstName"
                android:textColor="#158EC6"
                android:textSize="16sp"
                android:layout_column="0" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/etFirstName"
                android:layout_column="1"
                android:singleLine="true"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/last_name"
                android:id="@+id/tvLastName"
                android:textColor="#158EC6"
                android:textSize="16sp"
                android:layout_column="0" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/etLastName"
                android:layout_column="1"
                android:singleLine="true"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender"
                android:id="@+id/tvGender"
                android:textColor="#158EC6"
                android:textSize="16sp"
                android:layout_column="0" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_column="1"
                android:id="@+id/rgGender"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/rbMale"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/rbFemale"
                    android:layout_gravity="right"
                    android:layout_marginLeft="50dp"
                    android:checked="false" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:id="@+id/tvEmail"
                android:textColor="#158EC6"
                android:textSize="16sp"
                android:layout_column="0" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:layout_column="1"
                android:singleLine="true"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password"
                android:id="@+id/tvPassword"
                android:textColor="#158EC6"
                android:textSize="16sp"
                android:layout_column="0" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:layout_column="1"
                android:singleLine="true"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password_check"
                android:id="@+id/tvPasswordCheck"
                android:textColor="#158EC6"
                android:textSize="16sp"
                android:layout_column="0"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPasswordCheck"
                android:layout_column="1"
                android:singleLine="true"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btRegister"
        android:layout_below="@+id/tableLayout"
        android:layout_alignRight="@+id/tableLayout"
        android:layout_alignEnd="@+id/tableLayout"
        android:layout_marginTop="20dp"
        android:background="#158EC6"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:onClick="onRegister" />
</RelativeLayout>
