<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlShowbizProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlProfileHeader">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/ivWall"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ivWall"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#156EC6"
            android:id="@+id/frameLayout" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/ivProfile"
            android:layout_below="@+id/ivWall"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-40dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:id="@+id/ivShowbizType"
            android:layout_below="@+id/ivWall"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_megalobiz"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/showbiz_name"
            android:id="@+id/tvName"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/ivShowbizType"
            android:layout_toEndOf="@+id/ivShowbizType"
            android:layout_marginLeft="5dp"
            android:layout_alignTop="@+id/ivShowbizType" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:id="@+id/tvLabelGenre"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="13sp"
            android:layout_below="@+id/tvLabelBand"
            android:layout_alignLeft="@+id/tvBand"
            android:layout_alignStart="@+id/tvLabelBand"
            android:layout_alignParentStart="false"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musicians"
            android:id="@+id/tvLabelMusicians"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="13sp"
            android:layout_below="@+id/tvLabelGenre"
            android:layout_alignLeft="@+id/tvLabelGenre"
            android:layout_alignStart="@+id/tvLabelGenre"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:id="@+id/tvLabelAlbums"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="13sp"
            android:layout_below="@+id/tvLabelMusicians"
            android:layout_alignLeft="@+id/tvLabelMusicians"
            android:layout_alignStart="@+id/tvLabelMusicians"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:id="@+id/tvGenre"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#444444"
            android:textSize="13sp"
            android:layout_alignTop="@+id/tvLabelGenre"
            android:layout_toRightOf="@+id/tvLabelGenre"
            android:layout_toEndOf="@+id/tvLabelGenre"
            android:layout_marginLeft="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvMusiciansCount"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#444444"
            android:textSize="13sp"
            android:layout_alignTop="@+id/tvLabelMusicians"
            android:layout_alignLeft="@+id/tvGenre"
            android:layout_alignStart="@+id/tvGenre"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvAlbumsCount"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#444444"
            android:textSize="13sp"
            android:layout_alignTop="@+id/tvLabelAlbums"
            android:layout_alignStart="@+id/tvMusiciansCount"
            android:layout_toRightOf="@+id/tvLabelAlbums" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/ivRespect"
            android:layout_below="@+id/ivWall"
            android:layout_marginTop="10dp"
            android:src="@drawable/mb_icon_unrespected"
            android:layout_alignParentRight="false"
            android:layout_toRightOf="@+id/ivProfile"
            android:layout_marginLeft="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvRespectsCount"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/ivRespect"
            android:layout_toRightOf="@+id/ivRespect"
            android:layout_marginTop="-7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unrespected"
            android:id="@+id/tvRespectState"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="10sp"
            android:layout_below="@+id/ivRespect"
            android:layout_alignLeft="@+id/ivRespect"
            android:layout_alignStart="@+id/ivRespect"
            android:layout_marginTop="-5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singles"
            android:id="@+id/tvLabelSongs"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="13sp"
            android:layout_below="@+id/tvLabelAlbums"
            android:layout_alignLeft="@+id/tvLabelAlbums"
            android:layout_alignStart="@+id/tvLabelAlbums"
            android:layout_marginTop="5dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvSongsCount"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#444444"
            android:textSize="13sp"
            android:layout_alignLeft="@+id/tvAlbumsCount"
            android:layout_alignTop="@+id/tvLabelSongs"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band"
            android:id="@+id/tvLabelBand"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#158EC6"
            android:textSize="13sp"
            android:layout_below="@+id/ivShowbizType"
            android:layout_toEndOf="@+id/ivShowbizType"
            android:layout_alignLeft="@+id/ivShowbizType"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Solo"
            android:id="@+id/tvBand"
            android:maxLength="24"
            android:maxLines="2"
            android:textColor="#444444"
            android:textSize="13sp"
            android:layout_toRightOf="@+id/tvLabelBand"
            android:layout_toEndOf="@+id/tvLabelBand"
            android:layout_alignTop="@+id/tvLabelBand"
            android:layout_marginLeft="35dp"
            android:visibility="gone" />

    </RelativeLayout>

    <include layout="@layout/showbiz_members"
        android:layout_below="@+id/rlProfileHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
